--- a/index.html
+++ b/index.html
@@ -1,67 +1,203 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<script>
+var rarm = $('.right-arm-grp');
+var larm = $('.left-arm-grp');
+var l = $('#label');
+var i = 1; var rollback = false;
+var j = 0;
+var si = setInterval(function(){
+    j++;
+    if (j <= 11)
+    {
+        var s = 150 - (j *5);
+        setInterval(run, s);
+    } else {
+        clearInterval(si); 
+    }
+}, 1000);
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Jquery-plugin by Ammenze</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Jquery-plugin</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/Ammenze/jQuery-plugin/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Ammenze/jQuery-plugin/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Ammenze/jQuery-plugin" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
+function run(){
+    if (i == 0) {
+        rollback = false;
+        larm.removeClass('leftarm-rotate1');
+        rarm.removeClass('rightarm-rotate1');
+    }    
+	if (i == 8) {
+        i-=2;
+        rollback = true;
+        j++;
+    }
+    var degs = 15 * i;
+    i= rollback ? i-1 : i+1;
+    larm.rotate(0-degs);
+    rarm.rotate(degs);
+};
+jQuery.fn.rotate = function(degrees) {
+    $(this).css({'-webkit-transform' : 'rotate('+ degrees +'deg)',
+                 '-moz-transform' : 'rotate('+ degrees +'deg)',
+                 '-ms-transform' : 'rotate('+ degrees +'deg)',
+                 'transform' : 'rotate('+ degrees +'deg)'});
+    return $(this);
+};
+function startrun(speed) {
+    setInterval(run, speed);
+};
+</script>
+<style> 
+.main {
+    position: relative;
+}
+.div-body {
+	position: absolute; 
+	display: block;
+	background-color: Red;
+	border: 4px #dfdfdf solid;
+}
+.head {
+	top: 19px;
+	left: 28px; 
+	border-radius: 50px; 
+	width: 56px; 
+	height: 56px;
+}
+.head-shadow { 
+	box-shadow: 10px 5px 5px #888888;
+}
+.right-hand {
+	top: 84px;
+	left: 70px; 
+	border-radius: 20px; 
+	width: 23px; 
+	height: 23px;
+	box-shadow: 5px 0px 5px #888888;
+}
+.right-arm {
+	top: 44px;
+	left: 40px;
+	border-radius: 55px 15px 15px 55px / 15px;
+	width: 55px; 
+	height: 15px;
+    -ms-transform: rotate(10deg); /* IE 9 */
+    -webkit-transform: rotate(10deg); /* Chrome, Safari, Opera */
+    transform: rotate(10deg);
+	box-shadow: 5px -3px 5px #888888;
+}
+.right-arm2 {
+	top: 51px;
+	left: 80px;
+	border-radius: 35px 35px 35px 35px / 35px 35px 120px 35px;
+	width: 15px; 
+	height: 35px;
+    -ms-transform: rotate(5deg); /* IE 9 */
+    -webkit-transform: rotate(5deg); /* Chrome, Safari, Opera */
+    transform: rotate(5deg);
+	box-shadow: 5px 0px 5px #888888;
+}
+.left-hand {
+	top: 60px;
+	left: -28px; 
+	border-radius: 20px; 
+	width: 23px; 
+	height: 23px;
+}
+.left-arm {
+	top: 36px;
+	left: 28px; 
+	border-radius: 35px 35px 40px 40px / 40px 40px 100px 100px;
+	width: 20px; 
+	height: 66px;
+    -ms-transform: rotate(20deg); /* IE 9 */
+    -webkit-transform: rotate(20deg); /* Chrome, Safari, Opera */
+    transform: rotate(20deg);
+	box-shadow: 0px 5px 5px #888888;
+}
+.left-arm2 {
+	top: 78px;
+	left: -5px; 
+	border-radius: 80px 60px 40px 80px / 30px 40px 40px 30px;
+	width: 40px; 
+	height: 20px;
+    -ms-transform: rotate(27deg); /* IE 9 */
+    -webkit-transform: rotate(27deg); /* Chrome, Safari, Opera */
+    transform: rotate(27deg);
+	box-shadow: 1px 5px 5px #888888;
+}
+.body {
+	top: 60px;left: 75px;
+	border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+	width: 55px; height: 105px;
+    -ms-transform: rotate(-25deg); /* IE 9 */
+    -webkit-transform: rotate(-25deg); /* Chrome, Safari, Opera */
+    transform: rotate(-25deg);
+}
+.body-shadow { 
+	box-shadow: 5px 0px 5px #888888;
+}
+.spot1, .spot2, .spot3, .spot4 {
+	width: 6px; height: 6px;
+	border-radius: 8px;
+}
+.spot1 {
+	top: 44px;
+	left: 44px;
+}
+.spot2 {
+	top: 92px;
+	left: 23px;
+}
+.spot3 {
+	top: 57px;
+	left: 87px;
+}
+.spot4 {
+	top: 47px;	/*-28 -3*/
+	left: 47px; /*-47 -3*/
+}
+#footer {
+	top: 137px;
+	width: 100%; height: 80px;
+	background-color: white;
+	display: block;
+	border: none;
+}
+.right-arm-grp, .left-arm-grp {
+	position: absolute; 
+	display: block;
+    width: 100px;
+    height: 100px;
+}
+.right-arm-grp {
+    top: 30px;
+    left: 48px;
+}
+.left-arm-grp {
+    top: 38px;
+    left: 42px;
+}
+</style>
+</head>
+<body>
+	<div class="main">
+		<div class="div-body head head-shadow"></div>
+		<div class="div-body body body-shadow"></div>
+		<div class="main right-arm-grp">
+			<div class="div-body right-arm"></div>
+			<div class="div-body right-arm2"></div>
+			<div class="div-body right-hand"></div>
+			<div class="div-body spot3" style="border-width: 3px;"></div>
+			<div class="div-body spot4" style="border-width: 3px;"></div>
+		</div>
+		<div class="div-body body"></div>
+		<div class="div-body" id="footer"></div>
+		<div class="div-body head"></div>
+		<div class="main left-arm-grp">
+			<div class="div-body left-arm"></div>
+			<div class="div-body left-arm2"></div>
+			<div class="div-body left-hand"></div>
+			<div class="div-body spot1" style="border-width: 3px;"></div>
+			<div class="div-body spot2" style="border-width: 3px;"></div>
+		</div>
+	</div>
+</body>
 </html>
